--- a/src/includes/sections/about.ejs
+++ b/src/includes/sections/about.ejs
@@ -181,7 +181,7 @@
                   <h4>Ravi Sawlani</h4>
                   <h6>Contributor</h6>
                   <p>
-                    <span class="twitter social"><a href="https://twitter.com/binayak_ghosh" target="_blank"
+                    <span class="twitter social"><a href="https://twitter.com/gravity_vi" target="_blank"
                                                     title="Ravi Sawlani on Twitter"></a></span>
                     <span class="github social"><a href="https://github.com/gravityvi" target="_blank"
                                                    title="Ravi Sawlani on Twitter"></a></span>
@@ -209,6 +209,32 @@
                       title="Binayak on Twitter"></a></span>
 <span class="github social"><a href="https://github.com/swrdfish" target="_blank"
                      title="Binayak on Github"></a></span>
+                  </p>
+                </div>
+              </div>
+              <div class="col-md-3">
+                <div class="profile harshit">
+                  <div class="profile-pic"></div>
+                  <h4>Harshit Agarwal</h4>
+                  <h6>Contributor</h6>
+                  <p>
+                    <span class="twitter social"><a href="https://twitter.com/Harshit12155982" target="_blank"
+                      title="Harshit on Twitter"></a></span>
+<span class="github social"><a href="https://github.com/harshit-bs" target="_blank"
+                     title="Harshit on Github"></a></span>
+                  </p>
+                </div>
+              </div>
+              <div class="col-md-3">
+                <div class="profile priyansh">
+                  <div class="profile-pic"></div>
+                  <h4>Priyansh Garg</h4>
+                  <h6>Contributor</h6>
+                  <p>
+                    <span class="twitter social"><a href="https://twitter.com/priyansh3133" target="_blank"
+                      title="Priyansh on Twitter"></a></span>
+<span class="github social"><a href="https://github.com/garg3133" target="_blank"
+                     title="Priyansh on Github"></a></span>
                   </p>
                 </div>
               </div>
