Add: vwo, and fix docs

--- a/src/includes/header.ejs
+++ b/src/includes/header.ejs
@@ -44,7 +44,7 @@
 <script src="https://unpkg.com/@stackblitz/sdk@1.8.2/bundles/sdk.umd.js"></script>
 
 <!-- Adding synchronous VWO snippet to  prevent flickering issue -->
-<!-- <script src="https://dev.visualwebsiteoptimizer.com/lib/366135.js" id='vwoCode'></script> -->
+<script src="https://dev.visualwebsiteoptimizer.com/lib/366135.js" id='vwoCode'></script>
 
 <noscript>
     <style>
