--- a/src/includes/navbar.ejs
+++ b/src/includes/navbar.ejs
@@ -113,11 +113,12 @@
         </a>
       </div>
       <ul class="navigation-list">
-        <li><a class="navigation-link <%= activeLink('/guide') %>"
+        <li class="<%= activeLink('/guide') %>"><a class="navigation-link <%= activeLink('/guide') %>"
             href="/guide/overview/what-is-nightwatch.html">Guide</a></li>
-        <li><a class="navigation-link <%= activeLink('/api') %>" href="/api/">API</a></li>
-        <li><a class="navigation-link <%= activeLink('/about') %>" href="/about/community/">About</a></li>
-        <li><a class="navigation-link <%= activeLink('/blog') %>" href="/blog/">Blog</a></li>
+        <li class="<%= activeLink('/api') %>"><a class="navigation-link <%= activeLink('/api') %>" href="/api/">API</a></li>
+        <li class="<%= activeLink('/about') %>"><a class="navigation-link <%= activeLink('/about') %>" href="/about/community/">About</a></li>
+        <li class="<%= activeLink('/blog') %>"><a class="navigation-link <%= activeLink('/blog') %>" href="/blog/">Blog</a></li>
+        <li class="navigation-link-active-state"></li>
       </ul>
       <ul class="navigation-list social">
         <li>
