add link for angular component testing article

--- a/src/includes/sections/guide.ejs
+++ b/src/includes/sections/guide.ejs
@@ -133,6 +133,7 @@
                                     <li><a href="/guide/component-testing/write-jsx-react-tests.html">Write JSX React tests</a></li>
                                     <!--                          <li><a href="/guide/component-testing/testing-vue-components.html">Test Vue.js components</a></li>-->
                                     <li><a href="/guide/component-testing/storybook-component-testing.html">Storybook integration</a></li>
+                                    <li><a href="/guide/component-testing/testing-angular-components.html">Using Angular</a></li>
                                     <li><a href="/guide/component-testing/debugging.html">Debug component tests</a></li>
                                 </ul>
                             </div>
