--- a/src/includes/utils.ejs
+++ b/src/includes/utils.ejs
@@ -15,7 +15,7 @@
       tag.id = id;
     }
     tag.src = src;
-    tag.async = true;
+    tag.defer = true;
     let firstScriptTag = document.getElementsByTagName('script')[0];
     firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
 
