--- a/src/includes/utils.ejs
+++ b/src/includes/utils.ejs
@@ -9,12 +9,15 @@
     }
   }
 
-  function addScript(src, id, callback) {
+  function addScript(src, id, module, callback) {
     let tag = document.createElement('script');
     if (typeof id !== 'undefined' && id !== null) {
       tag.id = id;
     }
     tag.src = src;
+    if (module) {
+      tag.type = "module"
+    }
     tag.defer = true;
     let firstScriptTag = document.getElementsByTagName('script')[0];
     firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
