--- a/src/pages/index.ejs
+++ b/src/pages/index.ejs
@@ -25,13 +25,7 @@ function activeLink(urlPart) {
       <link rel="preconnect" href="https://cdnjs.cloudflare.com">
       <link rel="dns-prefetch" href="https://www.googletagmanager.com/">
       <link rel="dns-prefetch" href="https://dev.visualwebsiteoptimizer.com/">
-    
-      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3" />
-      <!-- Commenting till we automatically inline the critical css -->
-      <link rel="stylesheet" href="/css/reset.css">
-      <link rel="stylesheet" href="/css/base.css">
-      <link rel="stylesheet" href="/css/landing/style.css">
-      <title><%- data.pageTitle %></title>
+
       <!-- Fonts -->
       <style>
         @font-face {
@@ -39,7 +33,7 @@ function activeLink(urlPart) {
           font-style: italic;
           font-weight: 600;
           font-display: swap;
-          src: url(/css/landing/fonts/source-sans-3-italic.woff2) format('woff2');
+          src: url("/css/landing/fonts/source-sans-3-italic.woff2") format('woff2');
           unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
         }
 
@@ -49,9 +43,9 @@ function activeLink(urlPart) {
           font-weight: 400;
           font-display: swap;
           src:
-            url(/css/landing/fonts/source-sans-3.woff2) format('woff2'),
-            url(/css/landing/fonts/source-sans-3.woff2) format('woff2 supports variations'),
-            url(/css/landing/fonts/source-sans-3.woff2) format('woff2-variations');
+            url("/css/landing/fonts/source-sans-3.woff2") format('woff2'),
+            url("/css/landing/fonts/source-sans-3.woff2") format('woff2 supports variations'),
+            url("/css/landing/fonts/source-sans-3.woff2") format('woff2-variations');
           unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
         }
 
@@ -61,9 +55,9 @@ function activeLink(urlPart) {
           font-weight: 600;
           font-display: swap;
           src:
-            url(/css/landing/fonts/source-sans-3.woff2) format('woff2'),
-            url(/css/landing/fonts/source-sans-3.woff2) format('woff2 supports variations'),
-            url(/css/landing/fonts/source-sans-3.woff2) format('woff2-variations');
+            url("/css/landing/fonts/source-sans-3.woff2") format('woff2'),
+            url("/css/landing/fonts/source-sans-3.woff2") format('woff2 supports variations'),
+            url("/css/landing/fonts/source-sans-3.woff2") format('woff2-variations');
           unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
         }
 
@@ -73,9 +67,9 @@ function activeLink(urlPart) {
           font-weight: 700;
           font-display: swap;
           src:
-            url(/css/landing/fonts/source-sans-3.woff2) format('woff2'),
-            url(/css/landing/fonts/source-sans-3.woff2) format('woff2 supports variations'),
-            url(/css/landing/fonts/source-sans-3.woff2) format('woff2-variations');
+            url("/css/landing/fonts/source-sans-3.woff2") format('woff2'),
+            url("/css/landing/fonts/source-sans-3.woff2") format('woff2 supports variations'),
+            url("/css/landing/fonts/source-sans-3.woff2") format('woff2-variations');
           unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
         }
 
@@ -85,9 +79,9 @@ function activeLink(urlPart) {
           font-weight: 400;
           font-display: swap;
           src:
-            url(/css/landing/fonts/ibm-plex-mono-400.woff2) format('woff2'),
-            url(/css/landing/fonts/ibm-plex-mono-400.woff2) format('woff2 supports variations'),
-            url(/css/landing/fonts/ibm-plex-mono-400.woff2) format('woff2-variations');
+            url("/css/landing/fonts/ibm-plex-mono-400.woff2") format('woff2'),
+            url("/css/landing/fonts/ibm-plex-mono-400.woff2") format('woff2 supports variations'),
+            url("/css/landing/fonts/ibm-plex-mono-400.woff2") format('woff2-variations');
           unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
         }
 
@@ -97,9 +91,9 @@ function activeLink(urlPart) {
           font-weight: 600;
           font-display: swap;
           src:
-            url(/css/landing/fonts/ibm-plex-mono-600.woff2) format('woff2'),
-            url(/css/landing/fonts/ibm-plex-mono-600.woff2) format('woff2 supports variations'),
-            url(/css/landing/fonts/ibm-plex-mono-600.woff2) format('woff2-variations');
+            url("/css/landing/fonts/ibm-plex-mono-600.woff2") format('woff2'),
+            url("/css/landing/fonts/ibm-plex-mono-600.woff2") format('woff2 supports variations'),
+            url("/css/landing/fonts/ibm-plex-mono-600.woff2") format('woff2-variations');
           unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
         }
 
@@ -109,12 +103,19 @@ function activeLink(urlPart) {
           font-weight: 700;
           font-display: swap;
           src:
-            url(/css/landing/fonts/ibm-plex-mono-700.woff2) format('woff2'),
-            url(/css/landing/fonts/ibm-plex-mono-700.woff2) format('woff2 supports variations'),
-            url(/css/landing/fonts/ibm-plex-mono-700.woff2) format('woff2-variations');
+            url("/css/landing/fonts/ibm-plex-mono-700.woff2") format('woff2'),
+            url("/css/landing/fonts/ibm-plex-mono-700.woff2") format('woff2 supports variations'),
+            url("/css/landing/fonts/ibm-plex-mono-700.woff2") format('woff2-variations');
           unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
         }
       </style>
+
+      
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3" />
+      <link rel="stylesheet" href="/css/reset.css">
+      <link rel="stylesheet" href="/css/base.css">
+      <link rel="stylesheet" href="/css/landing/style.css">
+      <title><%- data.pageTitle %></title>
   </head>
 
   <body class="body">
